refactor: Update imports to use new common package structure